bug 424398. fix crash when installing new fonts while loading pages. r=vlad a=beltzner